k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koske-game-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koske-game-app
  template:
    metadata:
      labels:
        app: koske-game-app
    spec:
      containers:
      - name: koske-game-app
        image: game-app
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        command: ["yarn", "start"]

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: koske-game-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koske-game-api
  template:
    metadata:
      labels:
        app: koske-game-api
    spec:
      imagePullSecrets:
      - name: selfreg
      containers:
      - name: koske-game-api
        image: kske345/game-api:game-api
        ports:
        - containerPort: 3001
