k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: koske-game-app
spec:
  type: NodePort
  selector:
    app: koske-game-app
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: koske-game-app

---
apiVersion: v1
kind: Service
metadata:
  name: my-api-service
spec:
  type: NodePort
  selector:
    app: my-api
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
