k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: koske-game-ingress
spec:
  rules:
  - host: koske-game.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: koske-game-app
            port:
              number: 3000
